habit component created

--- a/src/app/features/habits/habits.component.html
+++ b/src/app/features/habits/habits.component.html
@@ -1,1 +1,6 @@
-<p>habits works!</p>
+<app-habit
+  *ngFor="let habit of habitsStorage.habits$ | async"
+  [habit]="habit"
+  (edit)="editHabit($event)"
+  (addOccurrence)="addHabitOccurrence($event)">
+</app-habit>
