--- a/src/app/features/navigation/navigation.component.html
+++ b/src/app/features/navigation/navigation.component.html
@@ -1,5 +1,5 @@
 <a [routerLink]="['', 'habits']">habits</a><br/>
-<a [routerLink]="['', 'habit-occurrence']">habit-occurrence</a><br/>
+<a [routerLink]="['', 'habit-occurrence', 1]">habit-occurrence</a><br/>
 <a [routerLink]="['', 'add-habit']">add-habit</a><br/>
 <a [routerLink]="['', 'edit-habit', 1]">edit-habit/1</a><br/>
 <a [routerLink]="['', 'statistics']">statistics</a><br/>
