--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,6 @@
 .main-wrapper {
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   background-image: url("/assets/images/background.jpg");
   background-repeat: no-repeat;
   background-size: cover;
