add properties to bar-chart component

--- a/src/app/features/habits-statistics/habits-statistics.component.html
+++ b/src/app/features/habits-statistics/habits-statistics.component.html
@@ -1,3 +1,7 @@
-<app-bar-chart></app-bar-chart>
+<app-bar-chart
+  [title]="barTitle"
+  [labels]="barLabels"
+  [data]="barData"
+></app-bar-chart>
 
 <app-radar-chart></app-radar-chart>
