--- a/src/app/features/habits-statistics/habits-statistics.component.html
+++ b/src/app/features/habits-statistics/habits-statistics.component.html
@@ -1,7 +1,7 @@
 <app-bar-chart
-  [title]="barTitle"
   [labels]="barLabels"
-  [data]="barData"
+  [dataset_name]="barTitle"
+  [dataset_value]="barData"
 ></app-bar-chart>
 
 <app-radar-chart></app-radar-chart>
