--- a/src/app/features/habits-statistics/ui/radar-chart/radar-chart.component.html
+++ b/src/app/features/habits-statistics/ui/radar-chart/radar-chart.component.html
@@ -1,3 +1,3 @@
 <div class="card">
-  <p-chart type="radar" [data]="data" [options]="options"></p-chart>
+  <p-chart type="radar" [data]="basicData" [options]="basicOptions"></p-chart>
 </div>
