--- a/src/app/features/habits-editor/habits-editor.component.html
+++ b/src/app/features/habits-editor/habits-editor.component.html
@@ -1,1 +1,7 @@
-<p>habits-editor works!</p>
+<div>
+  <p>{{isEditMode ? ('header.edit' | translate) + ' ' + habitName : ('header.new-habit' | translate)}}</p>
+  <form [formGroup]="form">
+    <p-button [label]="'button.cancel' | translate" styleClass="p-button-danger"></p-button>
+    <p-button [label]="(isEditMode ? 'button.edit' : 'button.add') | translate" styleClass="p-button-success"></p-button>
+  </form>
+</div>
