--- a/src/app/features/issue-reporter/issue-reporter.component.html
+++ b/src/app/features/issue-reporter/issue-reporter.component.html
@@ -1,1 +1,11 @@
-<p>issue-reporter works!</p>
+<div>
+  <p>{{ 'header.report-issue' | translate }}</p>
+  <form [formGroup]="form">
+    <span class="p-float-label">
+      <textarea id="report-message" rows="5" cols="30" pInputTextarea formControlName="message"></textarea>
+      <label for="report-message">{{ 'report.message' | translate }}</label>
+    </span>
+    <p-button (click)="onCancel()" [label]="'button.cancel' | translate" styleClass="p-button-danger"></p-button>
+    <p-button (click)="onSend()" [label]="'button.send' | translate" styleClass="p-button-success"></p-button>
+  </form>
+</div>
