--- a/src/app/features/habits/ui/habit/habit.component.html
+++ b/src/app/features/habits/ui/habit/habit.component.html
@@ -1,4 +1,4 @@
 <span>{{ habit.name }}</span>
 <span>{{ habit.hours }}</span>
-<button (click)="edit.emit(habit.id)">edit</button>
-<button (click)="addOccurrence.emit(habit.id)">add occurrence</button>
+<button (click)="edit.emit(habit.id)">{{ 'button.edit' | translate }}</button>
+<button (click)="addOccurrence.emit(habit.id)">{{ 'button.add-occurrence' | translate }}</button>
