--- a/src/app/features/habits-editor/habits-editor.component.html
+++ b/src/app/features/habits-editor/habits-editor.component.html
@@ -1,7 +1,39 @@
 <div>
-  <p>{{isEditMode ? ('header.edit' | translate) + ' ' + habitName : ('header.new-habit' | translate)}}</p>
+  <p>{{isEditMode ? ('header.edit-habit' | translate) : ('header.new-habit' | translate)}}</p>
   <form [formGroup]="form">
+    <span class="p-float-label">
+      <input pInputText id="name" type="text" formControlName="name" />
+      <label for="name">{{ 'habit-editor.name' | translate }}</label>
+    </span>
+    <span class="p-float-label">
+      <input pInputText id="category" type="text" formControlName="category" />
+      <label for="category">{{ 'habit-editor.category' | translate }}</label>
+    </span>
+    <p-divider></p-divider>
+    <span class="p-float-label">
+      <p-inputNumber id="goalHours" formControlName="goalHours" inputId="goalHours" [useGrouping]="false" [min]="0"></p-inputNumber>
+      <label for="goalHours">{{ 'habit-editor.goal-hours' | translate }}</label>
+    </span>
+    <span class="p-float-label">
+      <p-inputNumber id="goalMinutes" formControlName="goalMinutes" inputId="goalMinutes" [useGrouping]="false" [min]="0" [max]="60"></p-inputNumber>
+      <label for="goalMinutes">{{ 'habit-editor.goal-minutes' | translate }}</label>
+    </span>
+    <div>
+      <label htmlFor="goalFrequency">{{ 'habit-editor.goal-frequency' | translate }}</label>
+      <p-dropdown id="goalFrequency" formControlName="goalFrequency" [options]="goalFrequency">
+        <ng-template pTemplate="selectedItem">
+          <div>{{ ('habit-editor.frequency.' + this.form.controls['goalFrequency'].value.name) | translate }}</div>
+        </ng-template>
+        <ng-template let-frequency pTemplate="item">
+            <div>{{ ('habit-editor.frequency.' + frequency.name) | translate }}</div>
+        </ng-template>
+      </p-dropdown>
+    </div>
     <p-button [label]="'button.cancel' | translate" styleClass="p-button-danger"></p-button>
-    <p-button [label]="(isEditMode ? 'button.edit' : 'button.add') | translate" styleClass="p-button-success"></p-button>
+    <p-button styleClass="p-button-success"
+              [label]="(isEditMode ? 'button.edit' : 'button.add') | translate"
+              [disabled]="form.invalid"
+              (click)="onUpdate()"
+    ></p-button>
   </form>
 </div>
