--- a/src/app/features/habits-statistics/habits-statistics.component.html
+++ b/src/app/features/habits-statistics/habits-statistics.component.html
@@ -1,14 +1,16 @@
-<app-bar-chart
-  [labels]="bar_labels"
-  [dataset_name]="bar_dataset_name"
-  [dataset_value]="bar_dataset_value"
-></app-bar-chart>
+<div class="card">
+  <app-bar-chart class="app-bar-chart chart"
+    [labels]="bar_labels"
+    [dataset_name]="bar_dataset_name"
+    [dataset_value]="bar_dataset_value"
+  ></app-bar-chart>
 
-<app-radar-chart
-  [labels]="radar_labels"
-  [dataset_name_1]="radar_dataset_name_1"
-  [dataset_name_2]="radar_dataset_name_2"
-  [dataset_value_1]="radar_dataset_value_1"
-  [dataset_value_2]="radar_dataset_value_2"
->
-</app-radar-chart>
+  <app-radar-chart class="app-radar-chart chart"
+    [labels]="radar_labels"
+    [dataset_name_1]="radar_dataset_name_1"
+    [dataset_name_2]="radar_dataset_name_2"
+    [dataset_value_1]="radar_dataset_value_1"
+    [dataset_value_2]="radar_dataset_value_2"
+  >
+  </app-radar-chart>
+</div>
