--- a/src/app/features/habits-editor/habits-editor.component.html
+++ b/src/app/features/habits-editor/habits-editor.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="big-feature-card">
   <p class="text">{{isEditMode ? ('header.edit-habit' | translate) : ('header.new-habit' | translate)}}</p>
   <form [formGroup]="form">
     <span class="p-float-label">
