--- a/src/app/features/habits-statistics/habits-statistics.component.html
+++ b/src/app/features/habits-statistics/habits-statistics.component.html
@@ -1,11 +1,11 @@
-<div class="card">
-  <app-bar-chart class="app-bar-chart chart"
+<div class="stats-card">
+  <app-bar-chart class="app-bar-chart"
     [labels]="bar_labels"
     [dataset_name]="bar_dataset_name"
     [dataset_value]="bar_dataset_value"
   ></app-bar-chart>
 
-  <app-radar-chart class="app-radar-chart chart"
+  <app-radar-chart class="app-radar-chart"
     [labels]="radar_labels"
     [dataset_name_1]="radar_dataset_name_1"
     [dataset_name_2]="radar_dataset_name_2"
