--- a/src/app/features/navigation/navigation.component.scss
+++ b/src/app/features/navigation/navigation.component.scss
@@ -16,9 +16,14 @@
     border-width: 0;
     padding-right: 20px;
     padding-bottom: 10px;
-}
-:host ::ng-deep .p-button:hover {
-    background-color: rgba(85, 82, 82, 0.7);
+
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    &:hover {
+        background-color: rgba(85, 82, 82, 0.7);
+    }
 }
 
 .sidebar{
@@ -26,6 +31,7 @@
         background-color: rgba(36, 34, 34, 0.8);
         max-height: 40px;
         border-radius: 20px;
+        padding-bottom: 10px;
 
         a{
             display: block;
@@ -34,13 +40,5 @@
             padding-top: 10px;
             text-decoration: none;
         }
-    }
-    a {
-        color: white;
-        font-family: Arial, Helvetica, sans-serif;
-    }
-    a:hover {
-        color:gray;
-        font-size:larger;
     }
 }
