--- a/src/app/features/settings/settings.component.html
+++ b/src/app/features/settings/settings.component.html
@@ -1,5 +1,5 @@
 <div  class="card">
-  <p>{{ 'header.settings' | translate }}</p>
+  <p class="text">{{ 'header.settings' | translate }}</p>
   <p-dropdown class="inputField" [options]="translations.getAvailableLanguages()"
               [formControl]="languageFormController"
               optionValue="code"
