--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,11 @@
 .main-wrapper {
-  width: 100vw;
-  min-height: 100vh;
-  background-image: url("/assets/images/background.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
+	width: 100vw;
+	min-height: 100vh;
+	background-image: url("/assets/images/background.jpg");
+	background-repeat: no-repeat;
+	background-size: cover;
+
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
