--- a/src/app/auth/features/register/register.component.html
+++ b/src/app/auth/features/register/register.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="auth-card">
   <p class="text">{{'header.register' | translate}}</p>
   <form [formGroup]="form">
     <span class="p-float-label">
@@ -10,7 +10,11 @@
       <label for="password">{{ 'register.password' | translate }}</label>
     </span>
 
-    <p-button class="button" styleClass="p-button-success" [label]="'button.register' | translate" (click)="onRegister()"></p-button>
-    <a [routerLink]="['', 'login']">{{ 'register.login' | translate }}</a><br/>
+    <div class="buttonRow">
+      <p-button class="button" styleClass="p-button-success" [label]="'button.register' | translate" (click)="onRegister()"></p-button>
+    </div>
+    <div class="buttonRow">
+      <a [routerLink]="['', 'login']">{{ 'register.login' | translate }}</a><br/>
+    </div>
   </form>
 </div>
