--- a/src/app/features/issue-reporter/issue-reporter.component.html
+++ b/src/app/features/issue-reporter/issue-reporter.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-  <p>{{ 'header.report-issue' | translate }}</p>
+  <p class="text">{{ 'header.report-issue' | translate }}</p>
   <form [formGroup]="form">
     <span class="p-float-label">
       <textarea class="textField" id="report-message" rows="5" cols="30" pInputTextarea formControlName="message"></textarea>
