--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,2 +1,86 @@
 @import "reset";
 @import "primeNg/toast";
+
+a {
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: underline;
+
+    &:hover {
+        color: gray;
+    }
+}
+
+.text {
+    color: white;
+    font-size:3vh
+}
+
+.card {
+    background-color: rgba(0, 0, 0, 0.7);
+    backdrop-filter: blur(5px);
+    border-radius: 20px;
+    margin: 0 auto;
+    padding-bottom: 4vh;
+    
+    width: 40vw;
+    min-width: 300px;
+    flex-direction: column;
+  
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    
+}
+
+.auth-card {
+    @extend .card;
+    
+    // margin-top: 20vh;
+}
+
+.feature-card {
+    @extend .card;
+
+    // margin-top: 25vh;
+}
+
+.big-feature-card {
+    @extend .feature-card;
+
+    // margin-top: 7vh;
+    // margin: 0 auto;
+}
+
+.stats-card {
+    @extend .card;
+
+    padding-bottom: 0;
+    margin-top: 7vh;
+    width: 90vw;
+    overflow: hidden;
+}
+
+.buttonRow {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 4vh;
+    // margin-bottom: 3vh;
+
+    .button {
+        margin-left:2vb;
+        margin-right:2vb;
+    }
+}
+
+.icon-button {
+    background-color: rgba(255, 255, 255, 0);
+    color: white;
+    border: none;
+
+    :hover {
+    color:gray;
+    font-size:larger;
+    }
+}
