improved styles, added universal mode

--- a/src/app/features/habit-occurrence-adder/habit-occurrence-adder.component.html
+++ b/src/app/features/habit-occurrence-adder/habit-occurrence-adder.component.html
@@ -1,4 +1,6 @@
 <div class="feature-card">
+  <span class="card__close-btn pi pi-times" [routerLink]="['']"></span>
+
   <p class="text">{{habitName}}</p>
   <form [formGroup]="form">
     <span class="p-float-label">
