--- a/src/app/features/habits-statistics/habits-statistics.component.html
+++ b/src/app/features/habits-statistics/habits-statistics.component.html
@@ -1,4 +1,6 @@
 <div class="stats-card">
+  <span class="card__close-btn pi pi-times" [routerLink]="['']"></span>
+
   <app-bar-chart class="app-bar-chart"
     [labels]="bar_labels"
     [dataset_name]="bar_dataset_name"
