--- a/src/app/features/issue-reporter/issue-reporter.component.html
+++ b/src/app/features/issue-reporter/issue-reporter.component.html
@@ -1,4 +1,6 @@
 <div class="card">
+  <span class="card__close-btn pi pi-times" [routerLink]="['']"></span>
+
   <p class="text">{{ 'header.report-issue' | translate }}</p>
   <form [formGroup]="form">
     <span class="p-float-label">
