--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="main-wrapper">
   <app-navigation></app-navigation>
+  <app-access-customization></app-access-customization>
   <router-outlet></router-outlet>
 </div>
