--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,5 @@
 .main-wrapper {
+  position: relative;
 	width: 100vw;
 	min-height: 100vh;
 	background-image: url("/assets/images/background.jpg");
