--- a/src/app/features/habits/habits.component.scss
+++ b/src/app/features/habits/habits.component.scss
@@ -1,44 +1,30 @@
 .habit-card-container {
-    display: flex;
-    flex-wrap: wrap;
-    // justify-content: space-around;
-    padding-left: 8%;
-    padding-right: 8%;
-    // margin: 0 auto;
-    justify-content: space-between;
-
-    & > * {
-        width: 26%;
-        margin: 10px;
-        min-width: 200px;
-    }
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 0 40px;
+  padding-left: 8%;
+  padding-right: 8%;
 }
 
 .habit-card {
-    display: flex;
-    flex-direction: column;
-    margin: 10px;
-    padding-top: 30px;
-    padding: 40px 10px 10px 10px;
-    border-radius: 20px;
-}
+  display: flex;
+  flex-direction: column;
+  margin: 10px;
+  padding: 30px 0 0 0;
+  border-radius: 20px;
+  width: 320px;
+  max-width: calc(100vw - 20px);
 
-.habit-card-background {
+  &__header {
     border-top-right-radius: 20px;
     border-top-left-radius: 20px;
     min-height: 35px;
-}
+    background-color: white;
+  }
 
-.habit-card-icon {
-    float: right;
-    margin-top: 9px;
-    margin-right: 17px;
-    scale: 1.3;
-    opacity: 0.7;
-    rotate: 0deg;
-}
-
-.habit-card-inside {
+  &__content {
+    flex: 1;
     background-color: rgba(0, 0, 0, 0.7);
     backdrop-filter: blur(5px);
     border-bottom-right-radius: 20px;
@@ -46,30 +32,20 @@
     color: rgb(255, 255, 255);
     align-items: center;
     min-height: 178px;
-    
+    cursor: pointer;
+
     .pi {
-        font-size: 68px;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+      font-size: 68px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      transition: color .3s, font-size .3s;
     }
 
-    :hover {
-        color:gray;
-        font-size:72px;
+    &:hover > .pi {
+      color: gray;
+      font-size: 80px;
     }
-}
-
-.habit-card-header {
-    font-weight: 400;
-    color: white;
-    padding-bottom: 10px;
-}
-
-.habit-card-content {
-    font-weight: 700;
-    font-size: large;
-    color: white;
-    padding-bottom: 20px;
+  }
 }
