--- a/src/app/features/habits/ui/habit/habit.component.html
+++ b/src/app/features/habits/ui/habit/habit.component.html
@@ -6,11 +6,11 @@
     </div>
     <div class="habit-card-inside">
         <button class="icon-button habit-card-button" (click)="edit.emit(habit.id)">
-            <span class="pi pi-ellipsis-h"></span>
+            <span class="pi pi-pencil"></span>
         </button>
         <div class="habit-card-header habit-card-name"><span>{{ habit.name }}</span></div>
         <div class="habit-card-content habit-card-hours"><span>{{ habit.hours }} hours</span></div>
-        
+
         <button class="icon-button habit-card-button" (click)="addOccurrence.emit(habit.id)">
             <span class="pi pi-plus"></span>
         </button>
