--- a/src/app/features/habits/ui/habit/habit.component.scss
+++ b/src/app/features/habits/ui/habit/habit.component.scss
@@ -6,6 +6,8 @@
 	margin: 10px;
 	padding-top: 30px;
 	border-radius: 20px;
+  width: 320px;
+  max-width: calc(100vw - 20px);
 
 	.habit-card-background {
 		border-top-right-radius: 20px;
@@ -18,7 +20,6 @@
 			margin-right: 17px;
 			scale: 1.3;
 			opacity: 0.7;
-			// rotate: 0deg;
 		}
 	}
 
@@ -33,15 +34,17 @@
 
 		.habit-card-header {
 			font-weight: 400;
-			color: white;
 			padding-bottom: 10px;
-		}
+      font-size: 2rem;
+      line-height: 25px;
+      color: var(--white-color);
+    }
 
 		.habit-card-content {
 			font-weight: 700;
-			font-size: large;
-			color: white;
+			color: var(--white-color);
 			padding-bottom: 20px;
+      font-size: 1.1rem;
 		}
 
 		.habit-card-button {
@@ -50,4 +53,17 @@
 			margin-left: auto;
 		}
 	}
+}
+
+.icon-button {
+  width: 40px;
+  height: 40px;
+  border-radius: 20px 20px !important;
+  transition: background-color .3s;
+  color: var(--white-color);
+  font-size: 1rem;
+
+  &:hover {
+    background-color: rgba(193, 193, 193, 0.11);
+  }
 }
