--- a/src/app/features/navigation/navigation.component.scss
+++ b/src/app/features/navigation/navigation.component.scss
@@ -1,44 +1,43 @@
 @import "primeicons/primeicons.css";
 
 :host ::ng-deep .p-sidebar {
-    background-color: rgba(0, 0, 0, 0.9);
-    color: white;
-    border-top-right-radius: 18px;
-    border-bottom-right-radius: 18px;
+  background-color: rgba(0, 0, 0, 0.9);
+  color: white;
+  border-top-right-radius: 18px;
+  border-bottom-right-radius: 18px;
 }
 
 :host ::ng-deep .p-button {
-    background-color: rgba(0, 0, 0, 0.9);
-    border-top-right-radius: 18px;
-    border-bottom-right-radius: 18px;
-    border-top-left-radius: 0px;
-    border-bottom-left-radius: 0px;
-    border-width: 0;
-    padding-right: 20px;
-    padding-bottom: 10px;
+  background-color: rgba(0, 0, 0, 0.7);
+  backdrop-filter: blur(5px);
+  border-radius: 0 10px 10px 0;
+  border-width: 0;
+  padding-right: 20px;
+  padding-bottom: 10px;
+  color: var(--white-color);
+  box-shadow: none;
+  position: absolute;
+  top: 0;
+  left: 0;
 
-    position: absolute;
-    top: 0;
-    left: 0;
-
-    &:hover {
-        background-color: rgba(85, 82, 82, 0.7);
-    }
+  &:hover {
+    background-color: rgba(85, 82, 82, 0.7);
+  }
 }
 
 .sidebar{
-    .navigation-element {
-        background-color: rgba(36, 34, 34, 0.8);
-        max-height: 40px;
-        border-radius: 20px;
-        padding-bottom: 10px;
+  .navigation-element {
+    background-color: rgba(36, 34, 34, 0.8);
+    border-radius: 20px;
+    padding-bottom: 10px;
 
-        a{
-            display: block;
-            width: 100%;
-            text-align: center;
-            padding-top: 10px;
-            text-decoration: none;
-        }
+    a{
+      display: block;
+      width: 100%;
+      text-align: center;
+      padding-top: 10px;
+      text-decoration: none;
+      color: var(--white-color);
     }
+  }
 }
