--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -21,6 +21,16 @@ body {
 }
 
 a {
-  text-decoration: none;
+  cursor: pointer;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  text-decoration: underline;
+
+  &:hover {
+    color: gray;
+  }
+}
+
+button {
   cursor: pointer;
 }
