--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,86 +1,95 @@
 @import "reset";
+@import "variables";
 @import "primeNg/toast";
 
-a {
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
-    text-decoration: underline;
-
-    &:hover {
-        color: gray;
-    }
-}
-
 .text {
-    color: white;
-    font-size:3vh
+  color: white;
+  font-size: 1.7rem;
 }
 
 .card {
-    background-color: rgba(0, 0, 0, 0.7);
-    backdrop-filter: blur(5px);
-    border-radius: 20px;
-    margin: 0 auto;
-    padding-bottom: 4vh;
-    
-    width: 40vw;
-    min-width: 300px;
-    flex-direction: column;
-  
-    display: flex;
-    justify-content: center;
-    align-items: center; 
-    
-}
+  position: relative;
+  background-color: rgba(0, 0, 0, 0.7);
+  backdrop-filter: blur(5px);
+  border-radius: 20px;
+  margin: 0 auto;
+  padding: 0 60px 40px;
 
-.auth-card {
-    @extend .card;
-    
-    // margin-top: 20vh;
-}
+  min-width: 300px;
+  flex-direction: column;
 
-.feature-card {
-    @extend .card;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-    // margin-top: 25vh;
-}
-
-.big-feature-card {
-    @extend .feature-card;
-
-    // margin-top: 7vh;
-    // margin: 0 auto;
-}
-
-.stats-card {
-    @extend .card;
-
-    padding-bottom: 0;
-    margin-top: 7vh;
-    width: 90vw;
-    overflow: hidden;
-}
-
-.buttonRow {
+  &__close-btn {
+    position: absolute;
+    top: -15px;
+    right: -15px;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 4vh;
-    // margin-bottom: 3vh;
+    width: 50px;
+    height: 50px;
+    border-radius: 25px 25px;
+    background-color: rgba(0, 0, 0, 0.8);
+    backdrop-filter: blur(5px);
+    color: white;
+    cursor: pointer;
+  }
 
-    .button {
-        margin-left:2vb;
-        margin-right:2vb;
-    }
+}
+
+.auth-card {
+  @extend .card;
+}
+
+.feature-card {
+  @extend .card;
+}
+
+.big-feature-card {
+  @extend .feature-card;
+}
+
+.stats-card {
+  @extend .card;
+
+  padding-bottom: 0;
+  margin-top: 7vh;
+  width: 90vw;
+}
+
+.buttonRow {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 4vh;
+
+  .button {
+    margin-left: 2vb;
+    margin-right: 2vb;
+  }
 }
 
 .icon-button {
-    background-color: rgba(255, 255, 255, 0);
-    color: white;
-    border: none;
+  background-color: rgba(255, 255, 255, 0);
+  color: white;
+  border: none;
+}
 
-    :hover {
-    color:gray;
-    font-size:larger;
-    }
+p-dropdown {
+  width: 100%;
+
+  .p-dropdown {
+    width: 100%;
+  }
+}
+
+p-inputnumber {
+  width: 100%;
+
+  .p-inputnumber{
+    width: 100%;
+  }
 }
